--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@testing-library/user-event": "^12.1.10",
     "eslint-config-prettier": "^8.3.0",
     "node-sass": "^6.0.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-redux": "7.0.1",
     "react-router-dom": "5.0.0",
     "react-scripts": "4.0.3",
     "redux": "4.0.1",
+    "redux-devtools-extension": "2.13.8",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -52,7 +56,6 @@
     "eslint-plugin-react": "^7.24.0",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
-    "prettier": "^2.3.2",
-    "redux-devtools-extension": "2.13.8"
+    "prettier": "^2.3.2"
   }
 }
